--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "fortawesome": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
